# django-learning

./: .env  .env-example  .gitignore  manage.py  pyproject.toml  readme.md
apps/engine/: cron.py  models.py  serializers.py  urls.py  views.py
apps/engine/migrations/: 0001_initial.py  0002_remove_user_hashed_password.py  0003_systeminformation_staking_duration_and_more.py
apps/engine/schemas/: __init__.py  activities.py  enum_type.py  financial_transactions.py  notifications.py  reward.py  staking.py  system_information.py  transactions.py  user.py  user_staking.py
apps/engine/serializers_container/: __init__.py  activities.py  finan_transac.py  notifications.py  reward.py  staking.py  system_information.py  transaction.py  user.py  user_staking.py
apps/engine/utils/: contant.py
apps/engine/views_container/: __init__.py  activities.py  finan_transac.py  notifications.py  reward.py  staking.py  system_information.py  token.py  transaction.py  user.py  user_staking.py
apps/users_admin/: apps.py
apps/users_velociti/: apps.py
database/: Dockerfile  docker-compose.yml
velociti/: asgi.py  settings.py  urls.py  wsgi.py
velocity/: asgi.py
